--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +19,7 @@
         android:theme="@style/Theme.ConectaMobile"
         tools:targetApi="31">
 
-        <!-- 1. PANTALLA DE LOGIN (Ahora es la LAUNCHER) -->
+
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
@@ -26,21 +29,9 @@
             </intent-filter>
         </activity>
 
-        <!-- 2. PANTALLA DE REGISTRO -->
-        <activity
-            android:name=".activities.RegisterActivity"
-            android:exported="false" />
-
-        <!-- 3. PANTALLA PRINCIPAL (Ya no es la launcher) -->
-        <activity
-            android:name=".activities.MainActivity"
-            android:exported="false" />
-
-        <!-- 4. PANTALLA DE CHAT -->
-        <activity
-            android:name=".activities.ChatActivity"
-            android:exported="false" />
+        <activity android:name=".activities.RegisterActivity" android:exported="false" />
+        <activity android:name=".activities.MainActivity" android:exported="false" />
+        <activity android:name=".activities.ChatActivity" android:exported="false" />
 
     </application>
-
 </manifest>
